Add web manifest to outlinr

--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
+    <!-- important meta tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="manifest" href="/outlinr/manifest.webmanifest">
     <!-- neat meta generator: https://megatags.co/ -->
     <!-- boring meta tags -->
     <!-- Search Engine -->
