--- a/aitest/index.html
+++ b/aitest/index.html
@@ -40,5 +40,6 @@
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
 </script>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
