--- a/aitest/index.html
+++ b/aitest/index.html
@@ -36,6 +36,7 @@
       firebase.initializeApp(firebaseConfig);
       firebase.analytics();
     </script>
+    <script src='https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js'></script>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
