--- a/aitest/index.html
+++ b/aitest/index.html
@@ -10,6 +10,7 @@
         <h1>AI test</h1>
       </header>
       <main>
+        <input id="imageinput" type="file" value="Upload image" />
       </main>
       <footer>
       </footer>
