--- a/aitest/index.html
+++ b/aitest/index.html
@@ -13,6 +13,7 @@
         <input id="imageinput" type="file" value="Upload image" />
       </main>
       <footer>
+        i give up
       </footer>
     </div>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
