Out with the old, in with the new

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,38 +1,21 @@
 <!doctype html>
-<html lang="en"  darkness-mode="dark">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Portfolio yay</title>
-    <meta name="description" content="I wish i didnt have to make this">
-    <meta name="author" content="Edaz">
-
-    <link rel="stylesheet" href="style.css?refresh=1">
+    <meta name="description" content="Things that i've made">
+    <meta name="author" content="Edazpotato">
+    
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 
   </head>
 
   <body>
-    <div id="wrapper">
-      <header id="header">
-        <h1>Things that I've made</h1>
-      </header>
-      <main id="content">
-        <nav id="tabs">
-          <ul>
-            <li><a id="cool-btn"></a>Cool things</li>
-            <li><a id="not-so-cool-btn">Not quite as cool things</a></li>
-          </ul>
-        </nav>
-        <section id="items">
-          <aside id="cool">
-
-          </aside>
-          <aside id="not-so-cool">
-
-          </aside>
-        </section>
-      </main>
+    <div id="treeleg">
+      
     </div>
     <div id="scripts">
       <script src="app.js?refresh=1"></script>
