--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,7 +18,9 @@
       
     </div>
     <div id="scripts">
-      <script src="app.js?refresh=1"></script>
+      <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+      <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+      <script src="app.js"></script>
     </div>
   </body>
 </html>
