Poggers inline styles

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -32,6 +32,10 @@
 	  <meta name="og:type" content="website">
 	
 	  <!-- css -->
+	  <style>
+		  /* prevent unreandered vue stuff from showing */
+		  [v-cloak] { display:none; }
+	  </style>
 	  <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
