add thingy mijingy

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,7 +34,9 @@
 	  <!-- css -->
 	  <style>
 		  /* prevent unreandered vue stuff from showing */
-		  [v-cloak] { display:none; }
+		  [v-cloak] {
+			  display: none !important;
+		  }
 	  </style>
 	  <link rel="stylesheet" href="css/styles.css">
   </head>
