--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -33,9 +33,37 @@
 	
 	  <!-- css -->
 	  <style>
-		  /* prevent unreandered vue stuff from showing */
+		  /* loading spinner*/
+		  /* from https://gist.github.com/oze4/c4f87f6f83630850fabc5e4426874952 */
 		  [v-cloak] {
-			  display: none !important;
+			  display: block;
+			  padding: 50px 0;
+		  }
+		  @keyframes spinner {
+			  to {
+				  transform: rotate(360deg);
+			  }
+		  }
+		  [v-cloak]:before {
+			  content: "";
+			  box-sizing: border-box;
+			  position: absolute;
+			  top: 50%;
+			  left: 50%;
+			  width: 20px;
+			  height: 20px;
+			  margin-top: -10px;
+			  margin-left: -10px;
+			  border-radius: 50%;
+			  border: 2px solid #ccc;
+			  border-top-color: #333;
+			  animation: spinner 0.6s linear infinite;
+			  text-indent: 100%;
+			  white-space: nowrap;
+			  overflow: hidden;
+		  }
+		  [v-cloak]>* {
+			  display: none;
 		  }
 	  </style>
 	  <link rel="stylesheet" href="css/styles.css">
