--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
 						</div>
 					</div>
 				</div>
-				<aside id="datapacks" class="white-link top left">
+				<aside id="datapacks" class="white-link">
 					<a href="datapacks/" rel="noreferrer">Datapacks</a>
 				</aside>
-				<aside id="privacypolicy" class="white-link bottom left">
+				<aside id="privacypolicy" class="white-link">
 					<a href="privacy/" rel="noreferrer">Privacy and data policy</a>
 				</aside>
-				<aside id="imgcredit" class="white-link bottom right">
+				<aside id="imgcredit" class="white-link">
 					<a href="https://www.pexels.com/photo/blue-body-of-water-with-orange-thunder-1102915/" target="_blank" rel="noreferrer">Photo by Johannes Plenio from Pexels</a>
 				</aside>
 			</header>
