Rename some avatars!
Signed-off-by: Edaz Potato <edazpotato@gmail.com>

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		    "name" : "Edaz"
 		  },
 		  "datePublished" : "2020-08-28",
-		  "image" : "https://edaz.codes/assets/avatar-new.png",
+		  "image" : "https://edaz.codes/assets/avatar.png",
 		  "articleSection" : "Web Developer and Robot Creator. Also some other things.",
 		  "articleBody" : "Web Developer and Robot Creator. Also some other things.",
 		  "url" : "https://edazpotato.github.io/",
@@ -77,9 +77,9 @@
 				<div id="profile">
 					<div class="top">
 						<picture title="Edazpotato!">
-							<source srcset="assets/avatar-new.webp" type="image/webp">
-							<source srcset="assets/avatar-new.png" type="image/png">
-							<img class="avatar" src="assets/avatar-new.png" alt="Edazpotato's new avatar"/>
+							<source srcset="assets/avatar.webp" type="image/webp">
+							<source srcset="assets/avatar.png" type="image/png">
+							<img class="avatar" src="assets/avatar.png" alt="Edazpotato's new avatar"/>
 						</picture>
 						<div class="bio">
 							<h1>Edazpotato</h1>
