Work on branding page
Signed-off-by: Edaz Potato <edazpotato@gmail.com>

--- a/branding/index.html
+++ b/branding/index.html
@@ -44,16 +44,33 @@
     <div id="treeleg">
 	    <main class="wrapper">
 		    <section class="avatars">
-			    <aside class="avatar"></aside>
-			    <aside class="avatar"></aside>
+			    <aside class="avatar--container">
+					<img class="avatar" src="avatars/avatar.png" alt="Main avatar" title="Main avatar" />
+					<section class="dl-link-container">
+						<a class="dl-link--png" href="avatars/avatar.png" target="_blank" download></a>
+						<a class="dl-link--webp" href="avatars/avatar.webp" target="_blank" download></a>
+					</section>
+				</aside>
+			    <aside class="avatar--container">
+					<img class="avatar" src="avatars/icon.png" alt="Small icon avatar" title="Small icon avatar" />
+					<section class="dl-link-container">
+						<a class="dl-link--png" href="avatars/icon.png" target="_blank" download></a>
+						<a class="dl-link--webp" href="avatars/icon.webp" target="_blank" download></a>
+					</section>
+				</aside>
 		    </section>
 		    <section class="colours">
-			    <aside class="colour"></aside>
-			    <aside class="colour"></aside>
-			    <aside class="colour"></aside>
-			    <aside class="colour"></aside>
-			    <aside class="colour"></aside>
-			    <aside class="colour"></aside>
+				<section class="colours--avatar">
+					<aside class="colour ava-1"></aside>
+					<aside class="colour ava-2"></aside>
+					<aside class="colour ava-3"></aside>
+					<aside class="colour ava-4"></aside>
+					<aside class="colour ava-5"></aside>
+				</section>
+				<section class="colours--icon">
+					<aside class="colour icon-1"></aside>
+					<aside class="colour icon-2"></aside>
+				</section>
 		    </section>
 	    </main>
     </div>
