--- a/fetch/index.html
+++ b/fetch/index.html
@@ -1,35 +1,11 @@
 <html lang="en">
    <head>
    	<title>Loading...</title>
-      <style>
-         * {
-         padding: 0;
-         margin: 0;
-         border: 0;
-         box-sizing: border-box;
-         font-family: "Lucida Console", Monaco, monospace;
-         color: #007d08;
-         background-color: #000000;
-         min-height: 100%;
-         min-width: 100%;
-         }
-         #app {
-         	min-height: 98%;
-         	min-width: 98%;
-         	margin: 1%;
-         	padding: 1%;
-         	border: 1px solid #ffffff;
-         }
-         .string { color: green; }
-         .number { color: darkorange; }
-         .boolean { color: blue; }
-         .null { color: magenta; }
-         .key { color: red; }
-      </style>
+   	<link rel="stylesheet" type="text/css" href="style.css">
    </head>
    <body>
-   		<pre id="app">
-		</pre>
+   		<div id="app">
+		</div>
       	<script type="text/javascript" src="app.js"></script>
    </body>
 </html>
