--- a/fetch/index.html
+++ b/fetch/index.html
@@ -5,6 +5,7 @@
    </head>
    <body>
    		<div id="app">
+   			<h1>Loading...</h1>
 		</div>
       	<script type="text/javascript" src="app.js"></script>
    </body>
