--- a/fetch/index.html
+++ b/fetch/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
    <head>
+   	<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
    	<title>Loading...</title>
    	<link rel="stylesheet" type="text/css" href="style.css">
    </head>
