--- a/index.html
+++ b/index.html
@@ -90,22 +90,23 @@
 					</div>
 					<div class="bottom">
 						<div class="links">
-							<a class="button portfolio" href="portfolio/" rel="noreferrer">Portfolio</a>
-							<a class="button twitter" href="https://twitter.com/edazpotato" target="_blank" rel="noreferrer">Twitter</a>
-							<a class="button github" href="https://github.com/edazpotato" target="_blank" rel="noreferrer">Github</a>
-							<a class="button discord" href="https://discord.gg/mzR7eeZ" target="_blank" rel="noreferrer">Discord</a>
-							<a class="button contact" href="contact/" target="_blank" rel="noreferrer">Contact</a>
+							<!--<a class="button portfolio" href="portfolio/" rel="noopener">Portfolio</a>-->
+							<a class="button alles" href="https://people.alles.cx/fbaf303e-8f5a-453e-aad6-6b7a0aea8a7d" rel="noopener">Alles</a>
+							<a class="button twitter" href="https://twitter.com/edazpotato" target="_blank" rel="noopener">Twitter</a>
+							<a class="button github" href="https://github.com/edazpotato" target="_blank" rel="noopener">Github</a>
+							<a class="button discord" href="https://discord.gg/mzR7eeZ" target="_blank" rel="noopener">Discord</a>
+							<a class="button contact" href="contact/" target="_blank" rel="noopener">Contact</a>
 						</div>
 					</div>
 				</div>
 				<aside id="datapacks" class="white-link">
-					<a href="datapacks/" rel="noreferrer">Datapacks</a>
+					<a href="datapacks/" rel="noopener">Datapacks</a>
 				</aside>
 				<aside id="privacypolicy" class="white-link">
-					<a href="privacy/" rel="noreferrer">Privacy and data policy</a>
+					<a href="privacy/" rel="noopener">Privacy and data policy</a>
 				</aside>
 				<aside id="imgcredit" class="white-link">
-					<a href="https://www.pexels.com/photo/blue-body-of-water-with-orange-thunder-1102915/" target="_blank" rel="noreferrer">Photo by Johannes Plenio from Pexels</a>
+					<a href="https://www.pexels.com/photo/blue-body-of-water-with-orange-thunder-1102915/" target="_blank" rel="noopener">Photo by Johannes Plenio from Pexels</a>
 				</aside>
 			</header>
 			<main>
