Change bio description

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<div class="bio">
 							<h1>Edazpotato</h1>
 							<p>
-								Web Developer and Robot Creator. Also some other things.
+								Font end & Discord bot developer. Also some other things.
 							</p>
 						</div>
 					</div>
