--- a/404.html
+++ b/404.html
@@ -4,73 +4,31 @@
             <meta charset="UTF-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
             <meta name="viewport" content="width=device-width,initial-scale=1.0">
-            <title>Error 404 - File not found!</title>
-            <script src="/cdn-cgi/apps/head/S7U7Kyj1AZqGi-DXw2WJrP0C9iE.js"></script>
-            <style>
-                  /* setup document */
-                  * {
-                    margin: 0;
-                    padding: 0;
-                    border: 0;
-                        text-align: center;
-                  }
-                  html, body {
-                    height: 100%;
-                  }
-
-                  /* helf classes */
-                  .tall {
-                    height: 100%;
-                  }
-
-                  /* resize stuff */
-                  h1 {
-                    font-size: 500%;
-                    margin: 10%;
-                    margin-bottom: 4%;
-                  }
-                  h6 {
-                    font-size: 100%;
-                    font-size: 90%;
-                    margin: 3%;
-                  }
-                  p {
-                    padding: 4%;
-                  }
-                  span {
-                    padding: 4%;
-                  }
-
-                  /* do all the flexy things! */
-                  .container {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: center;
-                  }
-                  .bottom {
-                    justify-self: flex-end;
-                    margin-top: auto;
-                  }
-                  .top {
-                    justify-self: flex-start;
-                    margin-bottom: auto;
-                  }
-            </style>
+            <title>404 - not found</title>
       </head>
       <body>
-            <div class="container tall">
-            <div class="container top">
-            <h1>404</h1><br>
-            <h6>(that means that something broke!)</h6>
-            <hr>
-            <p>
-            uh.. so this is kinda embarising <br>(if you're seeing this page then I probably broke a link again).
-            <br><br>
-            How about we just go back to the <a href="/">home page</a> and pretend nothing ever happened, OK?
-            </p>
-            </div>
-            <span class="bottom">Or if you want, you could go fix the problem in the <a href="https://github.com/edazpotato/edazpotato.github.io">github repo</a></span>
-            </div>
+            <header class="header">
+                  <ul class="header--links">
+                        <li class="header--link"><a href="/" rel="noopener">Home</a></li>
+                        <li class="header--link"><a href="/datapacks" rel="noopener">Datapacks</a></li>
+                        <li class="header--link"><a href="/contact" rel="noopener">Contact</a></li>
+                        <li class="header--link"><a href="/free-vbucks-works-2020-legit" rel="noopener" target="_blank">Free V-BUCKS</a></li>
+                  </ul>
+            </header>
+            <main class="container tall">
+                  <article class="card">
+                        <section class="card--header">
+                              <h1>404</h1>
+                              <h3>We couldn't find the requested resource</h3>
+                        </section>
+                        <section class="card--content">
+                              <p>
+                                    However we did find <a href="" rel="noopener" target="_blank">this very special offer</a>, made especialy for you!
+                                    <br>
+                                    Make sure to check it out to get cheep/free stuff and support me!
+                              </p>
+                        </section>
+                  </article>
+            </main>
       </body>
 </html>
