--- a/404.html
+++ b/404.html
@@ -5,6 +5,32 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
             <meta name="viewport" content="width=device-width,initial-scale=1.0">
             <title>404 - not found</title>
+            <style>
+                  /* rubik-regular - latin */
+                  @font-face {
+                    font-family: 'Rubik';
+                    font-style: normal;
+                    font-weight: 400;
+                    src: url('/fonts/rubik-v11-latin-regular.eot'); /* IE9 Compat Modes */
+                    src: local(''),
+                         url('/fonts/rubik-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+                         url('/fonts/rubik-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+                         url('/fonts/rubik-v11-latin-regular.woff') format('woff'), /* Modern Browsers */
+                         url('/fonts/rubik-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+                         url('/fonts/rubik-v11-latin-regular.svg#Rubik') format('svg'); /* Legacy iOS */
+                  }
+                  * {
+                        font-family: Rubik;
+                        box-sizing: border-box;
+                        margin: 0;
+                        padding: 0;
+                        border: 0;
+                  }
+                  html, body {
+                        height: 100%;
+                        width: 100%;
+                  }
+            </style>
       </head>
       <body>
             <header class="header">
@@ -15,7 +41,7 @@
                         <li class="header--link"><a href="/free-vbucks-works-2020-legit" rel="noopener" target="_blank">Free V-BUCKS</a></li>
                   </ul>
             </header>
-            <main class="container tall">
+            <main class="main">
                   <article class="card">
                         <section class="card--header">
                               <h1>404</h1>
