--- a/404.html
+++ b/404.html
@@ -42,6 +42,7 @@
                         width: 100%;
                         height: auto;
                         box-shadow: 0px 0px 33px 5px rgba(0,0,0,0.75);
+                        border-bottom: 1px solid #3d3d3d;
                   }
                   .header--links {
                         list-style-type: none;
@@ -68,11 +69,13 @@
                         display: flex;
                         flex-direction: column;
                         align-items: center;
+                        border: 2px solid #3d3d3d;
                   }
                   .card--header {
                         width: 100%;
                         height: auto;
                         padding: 4px;
+                        border-bottom: 1px solid #3d3d3d;
                   }
                   .card--content {
                         width: 100%;
