--- a/404.html
+++ b/404.html
@@ -41,7 +41,8 @@
                   .header {
                         width: 100%;
                         height: auto;
-                        box-shadow: 0px 0px 33px 5px rgba(0,0,0,0.75);
+                        padding: 2px;
+                        box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.75);
                         border-bottom: 1px solid #3d3d3d;
                   }
                   .header--links {
@@ -53,7 +54,7 @@
                   }
                   .header--link a {
                         text-align: center;
-                        padding: 16px;
+                        margin: 16px;
                   }
                   .main {
                         width: 100%;
@@ -64,6 +65,7 @@
                   }
                   .card {
                         width: 500px;
+                        padding: 10px;
                         border-radius: 13px 13px 13px 13px;
                         box-shadow: 0px 0px 33px 1px rgba(0,0,0,0.75);
                         display: flex;
@@ -75,6 +77,7 @@
                         width: 100%;
                         height: auto;
                         padding: 4px;
+                        text-align: center;
                         border-bottom: 1px solid #3d3d3d;
                   }
                   .card--content {
