--- a/404.html
+++ b/404.html
@@ -34,6 +34,9 @@
                         color: #2da7ed;
                         text-decoration: none;
                   }
+                  hr {
+                        border-bottom-color: #3d3d3d;
+                  }
                   a:hover, a:focus {
                         color: #289de0;
                         text-decoration: underline;
@@ -71,14 +74,12 @@
                         display: flex;
                         flex-direction: column;
                         align-items: center;
-                        border: 2px solid #3d3d3d;
                   }
                   .card--header {
                         width: 100%;
                         height: auto;
                         padding: 4px;
                         text-align: center;
-                        border-bottom: 1px solid #3d3d3d;
                   }
                   .card--content {
                         width: 100%;
@@ -101,6 +102,7 @@
                               <h1>404</h1>
                               <h3>We couldn't find the requested resource</h3>
                         </section>
+                        <hr>
                         <section class="card--content">
                               <p>
                                     However we did find <a href="" rel="noopener" target="_blank">this very special offer</a>, made especialy for you!
