--- a/404.html
+++ b/404.html
@@ -19,6 +19,19 @@
                          url('/fonts/rubik-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
                          url('/fonts/rubik-v11-latin-regular.svg#Rubik') format('svg'); /* Legacy iOS */
                   }
+                  /* work-sans-regular - latin */
+                  @font-face {
+                    font-family: 'Work Sans';
+                    font-style: normal;
+                    font-weight: 400;
+                    src: url('../fonts/work-sans-v8-latin-regular.eot'); /* IE9 Compat Modes */
+                    src: local(''),
+                         url('../fonts/work-sans-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+                         url('../fonts/work-sans-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+                         url('../fonts/work-sans-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
+                         url('../fonts/work-sans-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+                         url('../fonts/work-sans-v8-latin-regular.svg#WorkSans') format('svg'); /* Legacy iOS */
+                  }
                   * {
                         font-family: Rubik;
                         box-sizing: border-box;
@@ -60,6 +73,7 @@
                         margin: 16px;
                   }
                   .main {
+                        font-family: Work Sans;
                         width: 100%;
                         height: 100%;
                         display: flex;
@@ -84,6 +98,7 @@
                   .card--content {
                         width: 100%;
                         height: 100%;
+                        padding: 10px;
                   }
             </style>
       </head>
