--- a/404.html
+++ b/404.html
@@ -26,11 +26,11 @@
                     font-weight: 400;
                     src: url('../fonts/work-sans-v8-latin-regular.eot'); /* IE9 Compat Modes */
                     src: local(''),
-                         url('../fonts/work-sans-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-                         url('../fonts/work-sans-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-                         url('../fonts/work-sans-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
-                         url('../fonts/work-sans-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-                         url('../fonts/work-sans-v8-latin-regular.svg#WorkSans') format('svg'); /* Legacy iOS */
+                         url('/fonts/work-sans-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+                         url('/fonts/work-sans-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+                         url('/fonts/work-sans-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
+                         url('/fonts/work-sans-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+                         url('/fonts/work-sans-v8-latin-regular.svg#WorkSans') format('svg'); /* Legacy iOS */
                   }
                   * {
                         font-family: Rubik;
