--- a/404.html
+++ b/404.html
@@ -48,7 +48,8 @@
                         text-decoration: none;
                   }
                   hr {
-                        border-bottom-color: #3d3d3d;
+                        border-bottom: 1px solid #3d3d3d;
+                        opacity: 80%;
                   }
                   a:hover, a:focus {
                         color: #289de0;
