--- a/404.html
+++ b/404.html
@@ -85,7 +85,7 @@
                         width: 500px;
                         padding: 10px;
                         border-radius: 13px 13px 13px 13px;
-                        box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.75);
+                        box-shadow: 0px 6px 30px 1px rgba(0,0,0,0.75);
                         display: flex;
                         flex-direction: column;
                         align-items: center;
@@ -121,8 +121,7 @@
                         <hr>
                         <section class="card--content">
                               <p>
-                                    However we did find <a href="" rel="noopener" target="_blank">this very special offer</a>, made especialy for you!
-                                    Please make sure to check it out to get cheep/free stuff and support me :)
+                                    However we did find <a href="" rel="noopener" target="_blank">this very special offer</a>, made especialy for you!  -  Please make sure to check it out to get cheep/free stuff and support me :)
                               </p>
                         </section>
                   </article>
