--- a/404.html
+++ b/404.html
@@ -57,17 +57,22 @@
                   }
                   .header {
                         width: 100%;
-                        height: auto;
+                        height: 5%;
                         padding: 2px;
                         box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.75);
                         border-bottom: 1px solid #3d3d3d;
+                        text-align: center;
                   }
                   .header--links {
+                        height: 100%;
+                        width: 100%;
+                        display: flex;
+                        algin-items: center;
+                        justify-content: space-around;
                         list-style-type: none;
                         overflow: hidden;
                   }
                   .header--link {
-                        float: left;
                   }
                   .header--link a {
                         text-align: center;
@@ -76,7 +81,7 @@
                   .main {
                         font-family: Work Sans;
                         width: 100%;
-                        height: 100%;
+                        height: 95%;
                         display: flex;
                         align-items: center;
                         justify-content: center;
