Center header links vertically

--- a/404.html
+++ b/404.html
@@ -73,6 +73,8 @@
                         overflow: hidden;
                   }
                   .header--link {
+                        display: flex;
+                        align-items: center;
                   }
                   .header--link a {
                         text-align: center;
