--- a/404.html
+++ b/404.html
@@ -128,7 +128,7 @@
                         <hr>
                         <section class="card--content">
                               <p>
-                                    However we did find <a href="" rel="noopener" target="_blank">this very special offer</a>, made especialy for you!  -  Please make sure to check it out to get cheep/free stuff and support me :)
+                                    However we did find <a href="https://edazpotato.github.io/lets-get-arrested" rel="noopener" target="_blank">this very special offer</a>, made especialy for you!  -  Please make sure to check it out to get cheep/free stuff and support me :)
                               </p>
                         </section>
                   </article>
