--- a/contact/index.html
+++ b/contact/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Contact me!</title>
+    <!-- material web compnents -->
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
     <header>
@@ -19,5 +23,8 @@
         </ul>
       </section>
     </main>
+    <script>
+      mdc.ripple.MDCRipple.attachTo(document.querySelector('.ripple'));
+    </script>
   </body>
 </html>
