--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
 		<meta name="theme-color" content="#A31621">
 		<link rel="manifest" href="/manifest.webmanifest">
 
-
+		<!-- Turbolinks (makes pages load without loading them???)-->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.2.0/turbolinks.js"></script>
+		<!-- nProgress (makes that *fancy* loading bar at ze top to ze screen) -->
+		<script src='js/nprogress.js'></script>
+		<link rel='css/stylesheet' href='nprogress.css'/>
 		<!-- >>css<< -->
 		<!-- libraries -->
 		<link href="css/picnic.min.css" rel="stylesheet" media="screen"/>
