Redo uzx site and data policy

--- a/uzx/index.html
+++ b/uzx/index.html
@@ -1,70 +1,24 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <!-- metadata -->
-    <meta name="viewport" property="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="charset" property="charset" content="utf-8">
-    <!-- Primary Meta Tags -->
-    <title>UZX - The discord bot you waited for!</title>
-    <meta name="title" content="UZX - The discord bot you waited for!">
-    <meta name="description" content="UZX is the Discord bot you've been waiting for. Featuring jokes, memes, Minecraft, moderation and more, you'll never want another bot after UZX (in a good way)">
-    <meta name="theme-color" content="#0d7eff">
-    
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://edaz.codes/uzx/">
-    <meta property="og:title" content="UZX - The discord bot you waited for!">
-    <meta property="og:description" content="UZX is the Discord bot you've been waiting for. Featuring jokes, memes, Minecraft, moderation and more, you'll never want another bot after UZX (in a good way)">
-    <meta property="og:image" content="https://edaz.codes/uzx/uzx.png">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://edaz.codes/uzx/">
-    <meta property="twitter:title" content="UZX - The discord bot you waited for!">
-    <meta property="twitter:description" content="UZX is the Discord bot you've been waiting for. Featuring jokes, memes, Minecraft, moderation and more, you'll never want another bot after UZX (in a good way)">
-    <meta property="twitter:image" content="https://edaz.codes/uzx/uzx.png">
-
-    
-    <!-- stylesheets -->
-    <link rel="stylesheet" type="text/css" href="uzx-home.css"/>
-    <link rel="stylesheet" type="text/css" href="basic-grid.css"/>
-  </head>
-  <body id="body">
-    <div class="row vert spaced">
-      <div class="col">
-        <div class="row vert">
-          <div class="col">
-            <h1 title="Ultra Zesty Xenoblast ">UZX</h1>
-          </div>
-          <div class="col">
-            <h3>The Discord bot you waited for</h3>
-          </div>
-          <div class="col">
-          	<h6>Currently in private beta</h6>
-          </div>
-        </div>
-      </div>
-      <div class="col bottom">
-        <div class="row spaced">
-          <div class="col">
-            <a href="/uzx/invite" class="btn" title="Apply to have UZX added to your server" target="_blank">Apply</a>
-          </div>
-          <div class="col spacer"></div>
-          <div class="col">
-            <a href="/uzx/docs" class="btn" title="View the documentation for the UZX Discord bot">Documentation</a>
-          </div>
-          <div class="col spacer"></div>
-          <div class="col">
-            <a href="https://top.gg/bot/712195162532479008/vote" class="btn" title="Vote for UZX">Vote</a>
-          </div>
-          <div class="col spacer"></div>
-          <div class="col">
-            <a href="https://uzx.statuspage.io/" class="btn" title="View the current status and incident history for UZX">Status</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/gh/edazpotato/cookie-consent@latest/cookie-consent.js"></script>
-    <script src="https://yly9drz8dt5f.statuspage.io/embed/script.js"></script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>UZX - The only discord bot you'll ever need!</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+  <main class="container">
+    <section class="main">
+      <img class="avatar" src="uzx-smol-pp.png">
+      <aside class="words">
+        <h1 class="title" title="Ultra Zesty Xenoblast">UZX</h1>
+        <h2 class="subtitle">The only discord bot you'll ever need!</h2>
+      </aside>
+    </section>
+    <nav class="links">
+      <a class="link" rel="noopener" target="_blank" href="https://discord.com/oauth2/authorize?client_id=712195162532479008&scope=bot&permissions=2146958847">Invite UZX to your server!</a>
+      <a class="link" rel="noopener" href="your-data/">How we use your data</a>
+    </nav>
+  </main>
+</body>
 </html>
