Write UZX data policy and fix some formatting

--- a/uzx/your-data/index.html
+++ b/uzx/your-data/index.html
@@ -10,26 +10,84 @@
 		<nav>
 			<a rel="noopener" href="../">Back</a>
 		</nav>
-		<h1>How we use your data</h1>
+		<h1>UZX Data Policy</h1>
 	</header>
 	<main>
 		<hr>
 		<section>
-			<h3>What we store</h3>
-			<p>
-				<ul>
-					<li>Your Discord User ID.</li>
-					<li>Your Discord Guild (Server) ID.</li>
-					<li>Any information you share with us such as language or colour preferences.</li>
-				</ul>
-				We store Your Discord User ID in order to provide you with a customized experience using our application.
-				<br>
-				We store Your Discord Guild (AKA Server) ID in order to provide members of your Guild (AKA Server) with a customized experience using our application.
-				<br>
-We store information that you share with us in order to provide services including language localization, customized Embed (A Discord feature) colours and customized Bot (The UZX Discord Chatbot Application) prefixes.
-			</p>
+			<article>
+				<h3>When we gather your data</h3>
+				<p>
+					We gather your data when:
+					<ul>
+						<li>You log into the UZX Web Dashboard</li>
+						<li>You change a setting in the UZX Web Dashboard</li>
+						<li>You interact with the UZX Discord ChatBot</li>
+					</ul>
+				</p>
+			</article>
+			<article>
+				<h3>How we gather your data</h3>
+				<p>
+					We gather your data via:
+					<ul>
+						<li>Commands that you use when interacting with our Discord ChatBot</li>
+						<li>The Discord API when you sign into the UZX Web Dashboard</li>
+						<li>Input that you submit to the UZX Web Dashboard</li>
+					</ul>
+				</p>
+			</article>
+			<article>
+				<h3>Why we gather your data</h3>
+				<p>
+					We gather your data in order to provide you with a customized experience while using our services. Examples of customized features include:
+					<ul>
+						<li>Language selection</li>
+						<li>Customized Guild (AKA Server) ChatBot command prefixes</li>
+					</ul>
+				</p>
+			</article>
 		</section>
 		<hr>
+		<section>
+			<article>
+				<h3>How long we store your data</h3>
+				<p>
+					We will store your data indefinitely or until you request it's deletion.
+				</p>
+			</article>
+			<article>
+				<h3>Where we store your your data</h3>
+				<p>
+					We store your data in our main database, which is hosted on a secure VPS which is secured via passwords and two factor authentication.
+				</p>
+			</article>
+			<article>
+				<h3>How we store your data</h3>
+				<p>
+					We store your data in a secure database.
+				</p>
+			</article>
+			<article>
+				<h3>Why we store your data</h3>
+				<p>
+					We store your data in order to provide persistent features such as:
+					<ul>
+						<li>Language selection</li>
+						<li>Customized Guild (AKA Server) ChatBot command prefixes</li>
+					</ul>
+				</p>
+			</article>
+		</section>
+		<hr>
+		<section>
+			<article>
+				<h3>How to request deletion of your data</h3>
+				<p>
+					If for any reason you want your data deleted from our databases just send us an email at <a href="mailto:edazpotato@gmail.com"><b><code>edazpotato@gmail.com</code></b></a> detailing the data that you want deleted and proof you have permission to request the deletion of that data.
+				</p>
+			</article>
+		</section>
 	</main>
 </body>
 </html>
