Emoji folloing . looks bad

--- a/policies/index.html
+++ b/policies/index.html
@@ -49,7 +49,7 @@
 					listed on this page.
 					<br />
 					If you wish to opt-out of any of these policies, stop using
-					this website. :)
+					this website :')
 				</p>
 			</section>
 			<section id="privacy">
