don't index old pages

--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
 						<a href="attic/">My Attic</a> - Random side projects and
 						tests
 					</li>
+					<li>
+						<a href="old/">Old websites</a> - All the old versions
+						of this website
+					</li>
 				</ul>
 			</nav>
 		</footer>
