--- a/policies/index.html
+++ b/policies/index.html
@@ -3,6 +3,33 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="/apple-touch-icon.png?v=4"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="/favicon-32x32.png?v=4"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="/favicon-16x16.png?v=4"
+		/>
+		<link rel="manifest" href="/site.webmanifest?v=4" />
+		<link rel="shortcut icon" href="/favicon.ico?v=4" />
+		<meta name="msapplication-TileColor" content="#b91d47" />
+		<meta
+			name="msapplication-TileImage"
+			content="/mstile-144x144.png?v=4"
+		/>
+		<meta name="theme-color" content="#ffffff" />
+
 		<title>Policies | Edazpotato</title>
 		<style>
 			body {
