--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86">
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86"
+		/>
 
 		<link
 			rel="apple-touch-icon"
@@ -66,7 +69,7 @@
 				<li>
 					Tweeter:
 					<a
-						href="https://twitter.com/edazpotato"
+						href="https://twitter.com/intent/follow?screen_name=edazpotato"
 						rel="noopener"
 						target="_blank"
 						>@Edazpotato</a
@@ -84,7 +87,7 @@
 				<li>
 					Youtoobe:
 					<a
-						href="https://www.youtube.com/channel/UCK1ME1J0XNbN31bCOV9UjKw"
+						href="https://www.youtube.com/channel/UCK1ME1J0XNbN31bCOV9UjKw?sub_confirmation=1"
 						rel="noopener"
 						target="_blank"
 						>Edazpotato</a
