Add loot chest and remove new tab links

--- a/datapacks/index.html
+++ b/datapacks/index.html
@@ -88,6 +88,29 @@
 			<ul>
 				<li>
 					<section>
+						<h3>Loot chests</h3>
+						<h5>Tested on <b>1.16.4</b></h5>
+						<p>
+							Simple loot chests for Minecraft map creators.
+							See the <a
+								   href="https://github.com/edazpotato/loot-chests-datapack/"
+								   rel="noopener">
+							Github repository</a> for more details.
+						</p>
+						<a
+							href="https://github.com/edazpotato/loot-chests-datapack/releases/tag/v1.0"
+							rel="noopener"
+							>Download page</a
+						>
+						<a
+							href="https://youtu.be/G2LA07Z1tI0"
+							rel="noopener"
+							>Video</a
+						>
+					</section>
+				</li>
+				<li>
+					<section>
 						<h3>Maple syrup</h3>
 						<h5>Tested on <b>1.16.4</b></h5>
 						<p>
@@ -97,14 +120,12 @@
 						</p>
 						<a
 							href="packs/Maple_syrup_1.16.3_UNZIP_ME.zip"
-							target="_blank"
 							rel="noopener"
 							download="true"
 							>Download</a
 						>
 						<a
 							href="https://www.youtube.com/watch?v=Dj8gQIxkGQs"
-							target="_blank"
 							rel="noopener"
 							>Video</a
 						>
@@ -120,14 +141,12 @@
 						</p>
 						<a
 							href="packs/Maple_syrup_1.16.3_UNZIP_ME.zip"
-							target="_blank"
 							rel="noopener"
 							download="true"
 							>Download</a
 						>
 						<a
 							href="https://www.youtube.com/watch?v=XvpHfUOliiI"
-							target="_blank"
 							rel="noopener"
 							>Video</a
 						>
